Fixed z-index for contact modal

--- a/my-app/src/style/transition/_transition.scss
+++ b/my-app/src/style/transition/_transition.scss
@@ -55,7 +55,7 @@
 
 .portfolio-item{
     overflow: hidden;
-    z-index: 1000;
+    z-index: 10;
 }
 
 .portfolio-thumb {
